assets/style.css
/* did not find a need for :root selector*/

/* Universal Selector below*/

*{
  color: #0fe120;
  background-color: #012904;
  margin: 5px;
}

/* Text and Flex box CSS below*/

header {
  border: solid 8px;
}

.headercard {
  text-align: center;
  font-size: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  border: solid 8px;
}

.navcard {
  font-size: 40px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.seccard {
  display: flex;
}

aside{
  padding-top: 15px;
/*commented-out code in this block didnt work to align content as needed*/
  flex: .3;
  min-width: min-content;
  margin: 5px;
}

article {
  border-left: solid 5px;
  font-size: 20px;
  padding-left: 10px;
  padding-top: 20px;
/*commented-out code in this block didnt work to align content as needed*/
  margin: 5px;
  /* block-size: 70%; */
  /* min-width: 78%; */
  flex: 2;
}

figcaption {
  text-align: center;
  font-size: 40px;
}

footer {
  text-align: center;
  margin: 50px;
}

/*Imamges CSS code below*/

.imgcard{
  justify-content: center;
  display: flex;
  flex-wrap: wrap;
}

#mainProject {
  align-self: auto;
}

#sideProjects{

  scale: 65%;
}

/*Force State codes below*/

figure:hover {
  cursor: grab;
  filter: grayscale(1);
}

/*Screen Responsive Code below*/

@media screen and (max-width: 999px) {
  .headercard {
    flex-direction: column;
  }
  #sideProjects {
    scale:
  }
  
}

@media screen and (max-width: 459px;) {
  /* .seccard {
    flex-direction: column;
  } */
}
  

